; ModuleID = '/home/carl/AnghaBench/vlc/src/os2/extr_dirs.c_config_GetLibExecDir.c'
source_filename = "/home/carl/AnghaBench/vlc/src/os2/extr_dirs.c_config_GetLibExecDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"VLC_LIB_PATH\00", align 1
@PKGLIBEXECDIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @config_GetLibExecDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @config_GetLibExecDir() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* @getenv(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i8*, i8** %2, align 8
  %8 = call i8* @FromLocaleDup(i8* %7)
  store i8* %8, i8** %1, align 8
  br label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @PKGLIBEXECDIR, align 4
  %11 = call i8* @config_GetRealDir(i32 %10)
  store i8* %11, i8** %1, align 8
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i8*, i8** %1, align 8
  ret i8* %13
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i8* @FromLocaleDup(i8*) #1

declare dso_local i8* @config_GetRealDir(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
